fade in animations

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <img src="assets/bklreturns.jpg" alt="Profile Photo" class="hero-img">
       </div>
       <div class="split-right">
-        <h1><span id="typewriter"></span></h1>
-        <div class="about-header-lines">
+        <h1 class="fade-in-element"><span id="typewriter"></span></h1>
+        <div class="about-header-lines fade-in-element">
           <div class="about-header-main">Undergrad Student | B.S. Mechanical Engineering | Minor: Mechatronics</div>
           <div class="about-header-tagline">Empowering the Future through Intelligent Engineering</div>
         </div>
@@ -60,9 +60,9 @@
     </section>
 
     <section id="about" class="section">
-      <h2 class="section-title accent">About Me</h2>
+      <h2 class="section-title accent fade-in-element">About Me</h2>
       <div class="about-wrap">
-        <div class="about-card">
+        <div class="about-card fade-in-element">
           <p>
             I’m an enthusiastic Mechanical Engineering student passionate about robotics, automation, and Industry 4.0.
             My academic foundation and hands-on industry experiences have shaped me into someone who thrives on solving
@@ -79,7 +79,7 @@
           <b>Interests:</b> <br> Hardware Product Design, DFAM, Human-Robot Interaction, and more 🙂</li>
           
         </div>
-        <div class="skills-centered">
+        <div class="skills-centered fade-in-element">
           <ul class="skills-list">
             <li><b>CAD and Simulation:</b><br>SolidWorks, AutoCAD, Ansys, Abaqus, Fusion 360, NI Multisim, Simulink</li>
             <li><b>Engineering Methods:</b><br>DFM/DFA, Prototyping, Root Cause Analysis, GD&T, ISO Standards</li>
@@ -91,33 +91,33 @@
     </section>
 
     <section id="projects" class="section">
-      <h2 class="section-title accent">Projects</h2>
+      <h2 class="section-title accent fade-in-element">Projects</h2>
 
       <div class="project-subsection">
-        <h3 class="project-subheading accent">Personal Projects</h3>
-        <div class="projects-instructions accent left-aligned">Click a project to learn more</div>
+        <h3 class="project-subheading accent fade-in-element">Personal Projects</h3>
+        <div class="projects-instructions accent left-aligned fade-in-element">Click a project to learn more</div>
         <div class="project-grid">
-          <div class="project-card" data-project="proj1">
+          <div class="project-card fade-in-element" data-project="proj1">
             <h3 class="accent">Tone Control/Karaoke Mixer Circuit</h3>
             <img src="assets/project1-img.jpg" alt="Tone Control Circuit" class="project-img">
             <div class="achievement accent">Achievement: Clear audio with effective tone control.</div>
           </div>
-          <div class="project-card" data-project="proj2">
+          <div class="project-card fade-in-element" data-project="proj2">
             <h3 class="accent">Multi-Sensor Haptic Headset – ASME</h3>
             <img src="assets/project2-img.jpg" alt="Assistive Tech" class="project-img">
             <div class="achievement accent">Achievement: Tactile feedback device improving user experience.</div>
           </div>
-          <div class="project-card" data-project="proj3">
+          <div class="project-card fade-in-element" data-project="proj3">
             <h3 class="accent">Kibble Dispenser for Service Dogs</h3>
             <img src="assets/project3-img.jpg" alt="Kibble Dispenser" class="project-img">
             <div class="achievement accent">Achievement: 90% success rate operated by target users.</div>
           </div>
-          <div class="project-card" data-project="proj4">
+          <div class="project-card fade-in-element" data-project="proj4">
             <h3 class="accent">Additive Manufacturing Research</h3>
             <img src="assets/research_img_1.jpeg" alt="AM Research" class="project-img">
             <div class="achievement accent">Achievement: Successfully reduced mesh element count by 40% while improving simulation reliability by 30%.</div>
           </div>
-          <div class="project-card" data-project="proj5">
+          <div class="project-card fade-in-element" data-project="proj5">
             <h3 class="accent">Coming Soon!</h3>
             <img src="assets/project5-img.jpg" alt="Coming Soon" class="project-img">
           </div>
@@ -125,25 +125,25 @@
       </div>
 
       <div class="project-subsection">
-        <h3 class="project-subheading accent">Internship Projects</h3>
-        <div class="projects-instructions accent left-aligned">Click a project to learn more</div>
+        <h3 class="project-subheading accent fade-in-element">Internship Projects</h3>
+        <div class="projects-instructions accent left-aligned fade-in-element">Click a project to learn more</div>
         <div class="project-grid">
-          <div class="project-card" data-project="intern1">
+          <div class="project-card fade-in-element" data-project="intern1">
             <h3 class="accent">Screw Torque Testing</h3>
             <img src="assets/Screw PIC 1.png" alt="Screw Torque Testing" class="project-img">
             <div class="achievement accent">Key Takeaway: Hands-on experience with failure testing and data interpretation.</div>
           </div>
-          <div class="project-card" data-project="intern2">
+          <div class="project-card fade-in-element" data-project="intern2">
             <h3 class="accent">PowerApp Interface</h3>
             <img src="assets/Power PIC 1.png" alt="PowerApp Interface" class="project-img">
             <div class="achievement accent">Key Takeaway: Improved understanding of customer-facing tools in engineering.</div>
           </div>
-          <div class="project-card" data-project="intern3">
+          <div class="project-card fade-in-element" data-project="intern3">
             <h3 class="accent">Qualification Reports & LLCR Data Processing</h3>
             <img src="assets/Qualification PIC 1.png" alt="Qualification Reports" class="project-img">
             <div class="achievement accent">Key Takeaway: Proficiency in Minitab and Overleaf.</div>
           </div>
-          <div class="project-card" data-project="intern4">
+          <div class="project-card fade-in-element" data-project="intern4">
             <h3 class="accent">Fixture Design for Vibration Testing</h3>
             <img src="assets/Fixture PIC 2.png" alt="Fixture Design" class="project-img">
             <div class="achievement accent">Key Takeaway: Exposure to mechanical design DFAM techniques.</div>
@@ -155,10 +155,10 @@
     </section>
 
     <section id="experience" class="section">
-      <h2 class="section-title accent">Experience</h2>
-      <div class="projects-instructions accent">Click an experience to learn more</div>
+      <h2 class="section-title accent fade-in-element">Experience</h2>
+      <div class="projects-instructions accent fade-in-element">Click an experience to learn more</div>
       <div class="exp-list">
-        <div class="exp-card">
+        <div class="exp-card fade-in-element">
           <div class="exp-header" data-exp="amphenol">
             <span class="exp-title accent"><b>Mechanical Integrity Engineering Intern</b></span>
             <span class="exp-subtitle">Amphenol Communication Solutions</span>
@@ -173,7 +173,7 @@
             </ul>
           </div>
         </div>
-        <div class="exp-card">
+        <div class="exp-card fade-in-element">
           <div class="exp-header" data-exp="shape">
             <span class="exp-title accent"><b>Research Assistant</b></span>
             <span class="exp-subtitle">S.H.A.P.E. Lab and Human-Centered Robotics Lab</span>
@@ -187,7 +187,7 @@
             </ul>
           </div>
         </div>
-        <div class="exp-card">
+        <div class="exp-card fade-in-element">
           <div class="exp-header" data-exp="origin">
             <span class="exp-title accent"><b>Lab Technician</b></span>
             <span class="exp-subtitle">OriginLabs Penn State</span>
@@ -201,7 +201,7 @@
             </ul>
           </div>
         </div>
-        <div class="exp-card">
+        <div class="exp-card fade-in-element">
           <div class="exp-header" data-exp="asme">
             <span class="exp-title accent"><b>Design Team Officer / Project Lead</b></span>
             <span class="exp-subtitle">ASME Penn State</span>
@@ -218,9 +218,9 @@
     </section>
 
     <section id="contact" class="section">
-      <h2 class="section-title accent">Contact</h2>
+      <h2 class="section-title accent fade-in-element">Contact</h2>
       <div class="about-wrap">
-        <div class="about-card">
+        <div class="about-card fade-in-element">
           <p>
             Email: <a href="mailto:atharvajosh@gmail.com">atharvajosh@gmail.com</a><br>
             LinkedIn: <a href="https://www.linkedin.com/in/atharvajoshi2027" target="_blank">View Profile</a><br>
@@ -228,7 +228,7 @@
           </p>
           <p>Thank you for viewing my portfolio! Feel free to reach out to learn more about my projects or collaborate!</p>
         </div>
-        <div class="skills-centered">
+        <div class="skills-centered fade-in-element">
           <img src="assets/bkl.jpg" alt="Contact Illustration" class="contact-img">
         </div>
       </div>
